# judege_you-

./: .env  .gitignore  Dockerfile  README.md  __main__.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
ai/: embeddings.py
ai/models/: ollama_client.py
api/: __init__.py  main.py
api/middleware/: __init__.py
api/routes/: __init__.py  analysis.py  competitive.py  health.py  projects.py  reports.py  simulation.py
cli/: commands.py
config/: settings.py
core/: __init__.py  config_manager.py
core/di/: __init__.py  container.py
core/models/: __init__.py  analysis.py  project.py  team.py
core/services/: __init__.py  analysis_service.py  project_service.py
database/: config.py
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py
database/models/: __init__.py
database/repositories/: analysis_repository.py  project_repository.py  team_repository.py
modules/: ai_reasoning_engine.py  architecture_auditor.py  competitor_analysis_engine.py  hackathon_readiness_engine.py  interview_simulation_engine.py  judge_simulation_engine.py  knowledge_base_engine.py  project_scanner.py  report_generator.py  roast_engine.py  weakness_detection_engine.py
parsers/: code_parser.py  document_parser.py  ppt_parser.py
tests/: conftest.py  test_ai.py  test_api.py  test_cli.py  test_modules.py  test_repositories.py  test_services.py
